Fix flash of invisible text (FOIT)

--- a/scss/mixins/_mixin.font.plone.scss
+++ b/scss/mixins/_mixin.font.plone.scss
@@ -39,5 +39,6 @@
     src: local(quote($local)), $src;
     font-weight: $weight;
     font-style: $style;
+    font-display: swap;
   }
 }
